=== HEAD

* Remove private methods from Sequel::BasicObject on ruby 1.8 (i.e. most Kernel methods) (jeremyevans)

* Add Sequel::BasicObject.remove_methods!, useful on 1.8 if libraries required after Sequel add methods to Object (jeremyevans)

* Change Sequel.connect with a block to return the block's value (jonas11235)

* Add an rcte_tree plugin, which uses recursive common table expressions for loading trees stored as adjacency lists (jeremyevans)

* Make typecast_on_load plugin also typecast when refreshing the object (either explicitly or implicitly after creation) (jeremyevans)

* Fix schema parsing and dumping of tinyint columns when connecting to MySQL via the do adapter (ricardochimal)

* Fix transactions when connecting to Oracle via JDBC (jeremyevans)

* Fix plugin loading when plugin module name is the same as an already defined top level constant (jeremyevans)

* Add an AS400 JDBC subadapter (need jt400.jar in classpath) (jeremyevans, bhauff)

* Fix the emulated MSSQL offset support when core extensions are not used (jeremyevans)

* Make Sequel::BasicObject work correctly on Rubinius (kronos)

* Add the :eager_loader_key option to associations, useful for custom eager loaders (jeremyevans)

* Dataset#group_and_count no longer orders by the count (jeremyevans)

* Fix Dataset#limit on MSSQL 2000 (jeremyevans)

* Support eagerly load nested associations when lazily loading *_to_one associations using the :eager option (jeremyevans)

* Fix the one_to_one setter to work with a nil argument (jeremyevans)

* Cache one_to_one associations like many_to_one associations instead of one_to_many associations (jeremyevans)

* Use the singular form for one_to_one association names instead of the plural form (john_firebaugh)

* Add real one_to_one associations, using the :one_to_one option of one_to_many is now an error (jeremyevans)

* Add Model#lock! which uses Dataset#for_update to lock model rows (jeremyevans)
